# OpenGL_Learning

./: CMakeLists.txt  README.md
res/shaders/: basic.shader
src/: main.cpp  test.cpp
